# data-lakes-play

./: .gitignore  Cargo.toml  Dockerfile
hudi/: spark.dockerfile
iceberg/: create-warehouse-request.json  iceberg-bug.yml  iceberg-spark.env  iceberg-spark.yml  polaris_catalog_setup.sh  trigger-bug.sh
src/: data.rs  delta_manager.rs  hudi_manager.rs  iceberg_manager.rs  main.rs
