[package]
name = "delta-play"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arrow = "52.2.0"
delta_kernel = "0.3.0"
deltalake = { version = "0.19.0", features = ["datafusion"] }
futures = "0.3.30"
iceberg = "0.3.0"
iceberg-catalog-rest = "0.3.0"
parquet = "52.2.0"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
